added current project to project table

--- a/def_style.css
+++ b/def_style.css
@@ -25,7 +25,7 @@ table {
     margin-right: auto;
     text-align: center;
     font-size: 2vmin;
-    width: max-content;
+    width: fit-content;
 }
 
 .prjTbl{
